deliverables/k8s/13-webapp-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: f1
spec:
  selector:
    app: webapp
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: f1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: app
          image: 590184119443.dkr.ecr.us-east-1.amazonaws.com/f1/webapp:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet: { path: "/health", port: 5000 }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: "/health", port: 5000 }
            initialDelaySeconds: 20
            periodSeconds: 10
