deliverables/k8s/21-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f1-ingress
  namespace: f1
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-http01
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  tls:
    - hosts: ["f1capstone.com"]
      secretName: tls-f1capstone-com
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: webapp, port: { number: 5000 } }
          - path: /api
            pathType: Prefix
            backend:
              service: { name: model-service, port: { number: 8000 } }
          - path: /monte-carlo
            pathType: Prefix
            backend:
              service: { name: monte-carlo-sim, port: { number: 8001 } }
